--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
   <div class="hero">
     <div class="hero-content">
       <h2>Welcome to Sip & Social</h2>
-      <p>Bring Your Celebrations to Life</p>
+      <p> Bringing Your Celebrations to Life</p>
       <button class="btn" onclick= "window.location.href='about.html'">
-        Plan Your Event
+        Get in Touch
       </button>
     </div>
   </div>
@@ -31,14 +31,14 @@
   <!-- About -->
   <section id="about">
     <h2>About Us</h2>
-    <p>Sip & Social is an event organisation company dedicated to creating unforgettable experiences. From corporate gatherings to weddings and private parties, we take care of every detail so you can relax and enjoy your special day.</p>
+    <p>Sip & Social is an event  company dedicated to creating unforgettable experiences. From corporate gatherings to weddings and private parties, we take care of every detail so you can relax and enjoy your special day.</p>
   </section>
 
   <!-- Services -->
   <section id="services">
     <h2>Our Services</h2>
     <div class="services">
-      <div class="card"><h3>Private Parties</h3><p>Birthdays, anniversaries, and more — stylishly organised.</p></div>
+      <div class="card"><h3>Private Parties</h3><p>Birthdays, Anniversaries, and more — stylishly organised.</p></div>
       <div class="card"><h3>Showers</h3><p>Beautifully planned baby & bridal showers.</p></div>
       <div class="card"><h3>Pop-ups & More</h3><p>Workshops, pop-ups, and unique experiences.</p></div>
       <div class="card"><h3>Social Gatherings</h3><p>Community events and cultural programs that bring people together.</p></div>
