--- a/about.html
+++ b/about.html
@@ -1,4 +1,3 @@
-<head>
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -7,25 +6,26 @@
   <title>Sip & Social - Event Organisation</title>
   <link rel="stylesheet" href="forms.css">
 </head>
-</html>
 <body>
+
 <div class="contact-container">
-    <form action="https://api.web3forms.com/submit" method="POST" class="contact- left" >
-          <div class="contact-left-title">
-            <h2>Get in touch</h2>
-            
-          </div>     
-           <input type="hidden" name="access_key" value="76a65466-923c-4fce-a17a-d8e3f4150caf">
-          <input type="text" name = "name " placeholder="Name" required class="contact-input" required>
-          <input type="email" name = "email" placeholder="Email" required class="contact-input" required>
-          <textarea name="message" placeholder="Your message   " class="contact-input" required ></textarea>
-          <button type="submit" class="contact-button">Send Message</button>
-          
-        </form>
+  <form action="https://api.web3forms.com/submit" method="POST" class="contact-left">
+    <div class="contact-left-title">
+      <h2>Get in touch</h2>
+    </div>     
 
+    <!-- Hidden Key -->
+    <input type="hidden" name="access_key" value="76a65466-923c-4fce-a17a-d8e3f4150caf">
 
-    <div class="contact-right">
+    <!-- Inputs -->
+    <input type="text" name="name" placeholder="Name" required class="contact-input">
+    <input type="email" name="email" placeholder="Email" required class="contact-input">
+    <textarea name="message" placeholder="Your message" class="contact-input" required></textarea>
 
-    </div>
+    <!-- Colorful Button -->
+    <button type="submit" class="contact-button">Send Message</button>
+  </form>
 </div>
+
 </body>
+</html>
